--- a/test.html
+++ b/test.html
@@ -18,10 +18,11 @@
 		<script type="application/javascript">
 			QUnit.test( "spalten unit test", function( assert ) {
 
-				assert.equal( typeof spalten( 4, 2 ) == "object", true, "should be true" );
+				assert.equal( typeof spalten( 4, 2 ) == "object", true, "should be equal to true" );
 
-				assert.deepEqual( spalten( 5, 2 ), { "size": 3, "count": 2, "factor": 1.3763819204711736 }, "should be deeply equal" );
-				
+				assert.deepEqual( spalten( 5, 2 ), { "size": 3, "count": 2, "factor": 1.3763819204711736 },
+					"should be equal to { 'size': 3, 'count': 2, 'factor': 1.3763819204711736 }" );
+
 			} );
 		</script>
 	</body>
